# python-scripts

./: .gitignore  README.md  buildInstructions.md  hold_w.py  pyproject.toml  requirements.txt
lambda/: create_lambda_package.py
lambda/recipe/: handler.py
lambda/weather/: handler.py
src/: main.py
src/gui/: hold_key_ui.py  main_window.py  recipe_ui.py  weather_ui.py
src/scripts/: hold_key_script.py  recipe_script.py  weather_script.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/e2e/: conftest.py  key_logger.py  test_gui_e2e.py  test_hold_key_e2e.py
tests/integration/: conftest.py  test_hold_key_integration.py  test_main_window_integration.py  test_recipe_integration.py  test_weather_integration.py
tests/unit/: conftest.py
tests/unit/gui/: test_hold_key_ui.py  test_main_window.py  test_recipe_ui.py  test_weather_ui.py
tests/unit/scripts/: test_hold_key_script.py  test_recipe_script.py  test_weather_script.py
