[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-scripts"
version = "0.1.0"
description = "Collection of Python automation scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "keyboard>=0.13.5",
    "pyautogui>=0.9.53",

    # GUI frameworks
    "customtkinter>=5.1.2",

    # Web interaction
    "requests>=2.32.5",
    "selenium>=4.38.0",

    # Utilities
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

build = [
	"pyinstaller>=6.16.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]